--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,9 +4,9 @@
 
 
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+  text-align: center;
+  height: 160px;
+  padding: 1em;
   color: white;
 }
 
@@ -21,4 +21,29 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.nav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  /* background-color: #333; */
+}
+.nav li {
+  margin-top: 1.5em;
+  float: left;
+  margin-bottom: .25em;
+}
+.nav li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  border-radius: 5px;
+}
+/* Change the link color to #111 (black) on hover */
+.nav li a:hover {
+  background-color: #111;
 }
