--- a/src/components/Edit/Edit.css
+++ b/src/components/Edit/Edit.css
@@ -9,4 +9,9 @@
     text-align: center;
     display: flex;
     justify-content: center;
+    font: roboto;
+}
+
+.formDiv {
+    margin-top: 1em;
 }
