--- a/src/components/AddMovies/AddMovies.css
+++ b/src/components/AddMovies/AddMovies.css
@@ -3,6 +3,15 @@
 }
 
 .addMovie {
-    align-items: center;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    font: roboto;
+}
+
+.add {
+    width: 50%;
+    margin-top: 1em;
+    padding: 1em;
+    display: block;
 }
