--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -11,3 +11,10 @@
     justify-content: center;
     align-items: flex-start;
 }
+
+.searchMovie {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    font: roboto;
+}
